# iced_dock

./: Cargo.toml  README.md  clippy.toml
examples/: custom_icons.rs  ide.rs  minimal.rs  readme.rs  themed.rs
src/: builder.rs  error.rs  factory.rs  lib.rs  manager.rs  prelude.rs  spatial.rs  state.rs  style.rs  unstable.rs  widget.rs
src/builder/: compile.rs  error.rs  index.rs  mod.rs  session.rs  spec.rs
src/model/: layout.rs  mod.rs  pane.rs  proportional.rs  tab.rs
src/style/: theme.rs
src/view/: mod.rs  proportional.rs  tree.rs
src/widget/: action.rs  compose.rs  dock.rs  dock_surface.rs  drop_overlay.rs  event.rs  message.rs  mod.rs  split.rs  state.rs  tab_dock.rs  tab_strip.rs
tests/: builder.rs  dock_update_layout_dirty.rs  event_no_double_apply.rs  factory_split.rs  factory_tabs.rs  focus.rs  layout_seed.rs  manager_dock.rs  serde_roundtrip.rs  simulator.rs  style.rs  tab_switch_layout_sync.rs
