[package]
name = "iced_dock"
version = "0.1.0"
edition = "2021"
description = "Docking layout system for iced"
license = "MIT"

[features]
default = []
serde = ["dep:serde", "slotmap/serde"]

[dependencies]
iced = { version = "0.14", default-features = false, features = ["wgpu", "advanced", "thread-pool"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
slotmap = "1.0"
thiserror = "2.0"

[dev-dependencies]
iced = { version = "0.14", default-features = false, features = ["wgpu", "advanced", "tokio"] }
serde_json = "1.0"

[[test]]
name = "serde_roundtrip"
path = "tests/serde_roundtrip.rs"
required-features = ["serde"]

[[example]]
name = "minimal"
path = "examples/minimal.rs"
required-features = []

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
restriction = { level = "warn", priority = -3 }

# Whitelist
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
single_match_else = "allow"
single_call_fn = "allow"
arbitrary_source_item_ordering = "allow"
question_mark_used = "allow"
pattern_type_mismatch = "allow"
min_ident_chars = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
missing_trait_methods = "allow"
non_ascii_literal = "allow"
pub_with_shorthand = "allow"
self_named_module_files = "allow"
single_char_lifetime_names = "allow"
separated_literal_suffix = "allow"
too_many_lines = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
pub_use = "allow"
error_impl_error = "allow"
missing_inline_in_public_items = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
float_arithmetic = "allow"
print_stderr = "allow"
print_stdout = "allow"
use_debug = "allow"
wildcard_enum_match_arm = "allow"